# pathtracer

./: .gitignore  Cargo.toml  README.md  scene.ron  scene1.ron  scene2.ron  scene4.ron  settings.ron
src/: camera.rs  compute.wgsl  compute_pipeline.rs  globals.rs  image.rs  lib.rs  main.rs  materials.rs  model.rs  ray.rs  render.wgsl  render_pipeline.rs  renderer.rs  shader.wgsl  sphere.rs  texture.rs  vector3.rs  wgpu_context.rs
src/math/: vector3.rs
src/renderer/: bounding_box.rs  bvh.rs  bytes.rs  camera.rs  compute.wgsl  compute_pipeline.rs  globals.rs  image.rs  materials.rs  mod.rs  ray.rs  scene.rs  sphere.rs  texture.rs  vector3.rs
