[package]
name = "pathtracer"
version = "0.1.0"
edition = "2021"
default-run = "pathtracer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
image = "0.24.5"
log = "0.4.17"
pollster = "0.2.5"
rand = "0.8.5"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
simple_logger = "4.0.0"
wgpu = "0.14.2"
winit = "0.27.5"
